style.css
#metro-notes-overlay {
    background: rgba(255, 255, 255, 0.7); 
    position: absolute; 
    top: 0px; 
    left: 0px;
    width: 100%;
    height: 100%; 
    z-index: 1000
}

.metro-notes-note {
    position: absolute;
    width: 250px;
    height: 250px;
    padding: 10px;
    font-size: 14px;
    resize: both;
    background: rgb(256, 246, 227);
    color: rbg(44, 44, 44);
    font-family: 'Helvetica', 'Segoe UI', 'Arial', sans-serif;
}
.metro-notes-note > p {
    margin: 0px;
}

